# mechanical

./: .gitignore  4040.SLDPRT  430-Front.SLDBLK  430-Side.SLDBLK  430-Top.SLDBLK  540-Front.SLDBLK  540-Side.SLDBLK  6822-2Z.SLDPRT  92125A085_18-8 Stainless Steel Hex Drive Flat Head Screw.SLDPRT  9293K111_Constant-Force Spring.SLDPRT  Base_Master.SLDPRT  Base_Sim-Static 1.SL3  CF_Spring_Idler.SLDPRT  DUMMY_DC12.SLDPRT  FR13_H101.SLDPRT  G_Mount.SLDPRT  Glue_In_Plug.SLDPRT  Gripper_Assy.SLDASM  Gripper_Carriage_Mount.SLDPRT  Gripper_Drive_Pulley.SLDPRT  Gripper_Geo.SLDPRT  Gripper_Jaw.SLDPRT  Gripper_Structure.SLDPRT  J1_Enclosure.SLDPRT  J1_Inner_Joint.SLDPRT  J1_Mount.SLDPRT  J1_Top_Plate.SLDPRT  J3_Mount-Static 1.MFC  J3_Mount.SLDPRT  J4 CNC Sim-Static 1.BD2  J4 CNC Sim-Static 1.BDF  J4 CNC Sim-Static 1.BMC  J4 CNC Sim-Static 1.MFC  J4 CNC Sim-Static 1.SL4  J4 CNC Sim.SLDASM  J4 Sim.SLDASM  J4_Bearing_Mount-Static 1.MFC  J4_Mount_CNC-Static 1.MFC  J4_Mount_CNC.SLDPRT  J4_Mount_Sheetmetal.SLDPRT  (+21 more)
ElectricalBox/: CSKO12124.SLDASM  CSKO12124.stp  CableReliefBacking.SLDPRT  CableReliefBacking.STL  GenericCover.STL  Part4.STL  Part5.STL  PlugSocket.SLDPRT  PlugSocket.STL  estop.SLDPRT  (+9 more)
URDF/Student_Arm.SLDASM/: CMakeLists.txt  package.xml
URDF/Student_Arm.SLDASM/config/: joint_names_Student_Arm.SLDASM.yaml
URDF/Student_Arm.SLDASM/launch/: display.launch  gazebo.launch
URDF/Student_Arm.SLDASM/meshes/: Gripper_Left.STL  Gripper_Right.STL  J1.STL  J2.STL  J4.STL  J5.STL  J6.STL  base_link.STL
URDF/Student_Arm.SLDASM/urdf/: Student_Arm.SLDASM.csv  Student_Arm.SLDASM.urdf
(+642 files in other folders)
